# credit-card-backend

./: .gitignore  CONTRIBUTING.md  README.md  docker-compose.yml  migrate.sh  pyproject.toml  session.py  settings.py  setup.cfg
auth_service/: Dockerfile  openssl.cnf
auth_service/alembic/: alembic.ini
auth_service/alembic/migrations/: env.py
auth_service/src/: main.py
auth_service/src/api/: auth.py  requests.py
auth_service/src/controllers/: security.py
auth_service/src/db/: Admin.sql  models.py
auth_service/tests/: conftest.py
auth_service/tests/integration_tests/: test_auth.py
base_service/: Dockerfile  pyproject.toml
base_service/alembic/migrations/: env.py
base_service/alembic/migrations/versions/: a67728c72062_comment.py
base_service/src/: main.py
base_service/src/api/: balance.py  rout_transactions.py
base_service/src/db/: models.py  Бэк карты+Доп.задание.sql  Бэк карты.sql
base_service/src/history/: history.py  log_storage.py
base_service/src/transactions/: transactions.py
base_service/src/users/: storage.py  users.py
base_service/tests/: conftest.py
base_service/tests/integration_tests/: test_bases.py  test_classes.py
base_service/tests/unit_tests/: test_history.py  test_transactions.py  test_users.py
helm/week8-app/: Chart.yaml  values.yaml
helm/week8-app/templates/: NOTES.txt  _helpers.tpl  auth-service-deployment.yaml  configmap.yaml  (+3 more)
k8s/: auth-service-deployment.yaml  base-service-deployment.yaml  configmap.yaml  secret.yaml  verify-service-deployment.yaml
verify_service/: .dockerignore  Dockerfile  pyproject.toml
verify_service/src/: main.py
verify_service/src/api/: verify.py
verify_service/src/db/: models.py
verify_service/tests/: conftest.py
verify_service/tests/integration_tests/: test_verify.py
(+2 files in other folders)
